# CheckEngine

./: AGENTS.md  EXECUTOR_ARCHITECTURE_V0.1.md  EXEC_DSL_V0.1.md  pyproject.toml
playground/: README.md  exec_dsl_flow_designer.html  exec_dsl_generator.html  pyproject.toml
playground/flask_app/: README.md  pyproject.toml
playground/flask_app/src/playground_app/: __init__.py  app.py
playground/flask_app/src/playground_app/templates/: datasource_configs.html  exec_dsl_flow_designer.html
playground/src/playground_app/: __init__.py
references/: example.json
src/check_engine/: __init__.py  engine.py  exceptions.py
src/check_engine/compiler/: __init__.py  compile_cache.py  dsl_compiler.py
src/check_engine/dsl/: __init__.py  fields.py  models.py
src/check_engine/expression/: __init__.py  evaluator.py
src/check_engine/parser/: __init__.py  json_parser.py  node_parsers.py
src/check_engine/renderer/: __init__.py  message_renderer.py  mode_renderers.py
src/check_engine/result/: __init__.py  builder.py
src/check_engine/runtime/: __init__.py  reference_resolver.py  state.py
src/check_engine/sql/: __init__.py  cte_builder.py  datasource.py  executor.py
src/check_engine/validator/: __init__.py  compile_validator.py  (+4 more)
tests/: test_cte_builder.py  test_engine_compile_cache.py  test_engine_integration.py  test_engine_postgres_json_integration.py  test_engine_runtime_results.py  test_expression_evaluator.py  test_json_parser.py  test_message_renderer.py  test_reference_resolver.py  test_sql_executor.py  test_sql_validator.py  test_validators.py
(+2 files in other folders)
