[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[project]
name = "check-engine"
version = "0.1.0"
description = "ExecDSL parser and execution engine"
readme = "EXEC_DSL_V0.1.md"
requires-python = ">=3.9"
dependencies = [
  "sqlalchemy>=2.0,<3.0",
  "sqlparse>=0.5.5",
]
