[project]
name = "playground-app"
version = "0.1.0"
description = "ExecDSL FastAPI playground"
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn",
  "jinja2",
  "sqlalchemy",
  "psycopg2-binary",
  "check-engine",
]

[tool.uv.sources]
check-engine = { path = "../..", editable = true }

[project.scripts]
playground-server = "playground_app:main"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
